--- a/app/assets/stylesheets/ie6.css
+++ b/app/assets/stylesheets/ie6.css
@@ -1,36 +1,36 @@
 /** IMAGE BORDER STYLE 1 */
 
 .image-style1a span {
-	background: url(images/bg3_04.gif) no-repeat left top;
+	background: url(/assets/bg3_04.gif) no-repeat left top;
 }
 
 /** IMAGE BORDER STYLE 2 */
 
 .image-style2a span {
-	background: url(images/bg3_05.gif) no-repeat left top;
+	background: url(/assets/bg3_05.gif) no-repeat left top;
 }
 
 /** IMAGE BORDER STYLE 3 */
 
 .image-style3a span {
-	background: url(images/bg3_06.gif) no-repeat left top;
+	background: url(/assets/bg3_06.gif) no-repeat left top;
 }
 
 /** IMAGE BORDER STYLE 4 */
 
 .image-style4a span {
-	background: url(images/bg3_07.gif) no-repeat left top;
+	background: url(/assets/bg3_07.gif) no-repeat left top;
 }
 
 
 #image-border {
-	background: url(images/bg2_03.gif) no-repeat left top;
+	background: url(/assets/bg2_03.gif) no-repeat left top;
 }
 
 /** LINK STYLE 1 */
 
 .link-style1 {
-	background: url(images/bg2_04.gif) no-repeat left top;
+	background: url(/assets/bg2_04.gif) no-repeat left top;
 }
 
 
