--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Verboverdade</title>
+  <title>Verbo da Verdade</title>
+  <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css" />
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+	<!--[if lte IE 7]>
+	<link href="ie6.css" rel="stylesheet" type="text/css" />
+	<![endif]-->
+	
 </head>
 <body>
 
